--- a/B01_registro.html
+++ b/B01_registro.html
@@ -3,24 +3,131 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B01 Registro de usuario</title>
+  <title>B01 – Registro de usuario | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
 
-  <div class="container my-5">
-    <h2>Registro de usuario</h2>
-    <form class="border p-4 bg-white rounded">
-      <div class="mb-3">
-        <label for="regEmail" class="form-label">Correo electrónico</label>
-        <input type="email" id="regEmail" class="form-control" placeholder="ej: ana@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="regPass" class="form-label">Contraseña</label>
-        <input type="password" id="regPass" class="form-control" placeholder="Mínimo 8 caracteres">
-      </div>
-      <button type="submit" class="btn btn-success">Registrarse</button>
-    </form>
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f2f2f2;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+    }
+
+    .btn-inicio {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+      border-radius: 8px;
+      text-decoration: none;
+      padding: 8px 20px;
+      transition: all 0.3s;
+    }
+
+    .btn-inicio:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.05);
+    }
+
+    .form-container {
+      background: linear-gradient(160deg, #2a1a1a, #3d2323);
+      color: #f2f2f2;
+      border: 1px solid rgba(184, 138, 68, 0.3);
+      border-radius: 15px;
+      padding: 40px;
+      box-shadow: 0 0 30px rgba(184, 138, 68, 0.15);
+      backdrop-filter: blur(4px);
+      transition: transform 0.3s ease;
+    }
+
+    .form-container:hover {
+      transform: translateY(-5px);
+    }
+
+    label {
+      color: #d9b679;
+      font-weight: 500;
+    }
+
+    input.form-control {
+      background-color: #f8f3ee;
+      color: #111;
+      border-radius: 6px;
+      border: 1px solid #b88a44;
+      padding: 10px;
+    }
+
+    input.form-control:focus {
+      border-color: #d4a85a;
+      box-shadow: 0 0 8px rgba(212, 168, 90, 0.6);
+    }
+
+    .btn-success {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-success:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 30px;
+      text-shadow: 0 0 10px rgba(184, 138, 68, 0.4);
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Encabezado -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
+  </header>
+
+  <!-- Formulario de registro -->
+  <div class="container my-5" style="max-width: 600px;">
+    <div class="form-container">
+      <h2>Registro de usuario</h2>
+      <form>
+        <div class="mb-3">
+          <label for="regEmail" class="form-label">Correo electrónico</label>
+          <input type="email" id="regEmail" class="form-control" placeholder="ej: ana@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="regPass" class="form-label">Contraseña</label>
+          <input type="password" id="regPass" class="form-control" placeholder="Mínimo 8 caracteres">
+        </div>
+        <button type="submit" class="btn btn-success w-100 mt-3">Registrarse</button>
+      </form>
+    </div>
   </div>
 
 </body>
