--- a/B02_login.html
+++ b/B02_login.html
@@ -3,42 +3,150 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>B02: Inicio de sesión</title>
+  <title>B02 – Inicio de sesión | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
 
-  <!-- Encabezado con logo/botón -->
-  <header class="bg-white shadow-sm py-3 mb-4">
-    <div class="container d-flex justify-content-center">
-      <!-- Aquí pondre poner una imagen cuando tenga logo -->
-      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
-        ← Volver a inicio
-      </a>
-    </div>
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f2f2f2;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+    }
+
+    .btn-inicio {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+      border-radius: 8px;
+      text-decoration: none;
+      padding: 8px 20px;
+      transition: all 0.3s;
+    }
+
+    .btn-inicio:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.05);
+    }
+
+    .form-container {
+      background: linear-gradient(160deg, #2a1a1a, #3d2323);
+      color: #f2f2f2;
+      border: 1px solid rgba(184, 138, 68, 0.3);
+      border-radius: 15px;
+      padding: 40px;
+      box-shadow: 0 0 30px rgba(184, 138, 68, 0.15);
+      backdrop-filter: blur(4px);
+      transition: transform 0.3s ease;
+    }
+
+    .form-container:hover {
+      transform: translateY(-5px);
+    }
+
+    label {
+      color: #d9b679;
+      font-weight: 500;
+    }
+
+    input.form-control {
+      background-color: #f8f3ee;
+      color: #111;
+      border-radius: 6px;
+      border: 1px solid #b88a44;
+      padding: 10px;
+    }
+
+    input.form-control:focus {
+      border-color: #d4a85a;
+      box-shadow: 0 0 8px rgba(212, 168, 90, 0.6);
+    }
+
+    .btn-primary {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-primary:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    .btn-outline-secondary {
+      border-color: #b88a44;
+      color: #b88a44;
+    }
+
+    .btn-outline-secondary:hover {
+      background-color: #b88a44;
+      color: #111;
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 30px;
+      text-shadow: 0 0 10px rgba(184, 138, 68, 0.4);
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Encabezado -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
   </header>
 
-  <div class="container my-5" style="max-width: 420px;">
-    <h2 class="mb-4 text-center">Inicio de sesión</h2>
+  <!-- Formulario -->
+  <div class="container my-5" style="max-width: 600px;">
+    <div class="form-container">
+      <h2>Inicio de sesión</h2>
 
-    <form id="loginForm" class="border p-4 bg-white rounded shadow-sm" onsubmit="event.preventDefault();">
-      <div class="mb-3">
-        <label for="loginEmail" class="form-label">Correo electrónico</label>
-        <input type="email" id="loginEmail" class="form-control" placeholder="cliente@vinaurbana.cl" required>
-      </div>
+      <form id="loginForm" onsubmit="event.preventDefault();">
+        <div class="mb-3">
+          <label for="loginEmail" class="form-label">Correo electrónico</label>
+          <input type="email" id="loginEmail" class="form-control" placeholder="cliente@vinaurbana.cl" required>
+        </div>
 
-      <div class="mb-3">
-        <label for="loginPass" class="form-label">Contraseña</label>
-        <input type="password" id="loginPass" class="form-control" required>
-      </div>
+        <div class="mb-3">
+          <label for="loginPass" class="form-label">Contraseña</label>
+          <input type="password" id="loginPass" class="form-control" placeholder="Tu contraseña" required>
+        </div>
 
-      <button type="button" id="btnLogin" class="btn btn-primary w-100 mb-3">Iniciar Sesión</button>
+        <button type="button" id="btnLogin" class="btn btn-primary w-100 mb-3">Iniciar Sesión</button>
 
-      <div class="d-flex gap-2">
-        <a href="B01_registro.html" class="btn btn-outline-secondary flex-grow-1">Registrar usuario</a>
-        <a href="B03_recuperar.html" class="btn btn-link flex-grow-1">¿Olvidaste tu contraseña?</a>
-      </div>
-    </form>
+        <div class="d-flex flex-column flex-md-row gap-2 justify-content-between">
+          <a href="B01_registro.html" class="btn btn-outline-secondary flex-grow-1">Registrar usuario</a>
+          <a href="B03_recuperar.html" class="btn btn-link text-light flex-grow-1">¿Olvidaste tu contraseña?</a>
+        </div>
+      </form>
+    </div>
   </div>
 
   <script>
@@ -56,5 +164,6 @@
       }
     });
   </script>
+
 </body>
 </html>
