--- a/index.html
+++ b/index.html
@@ -6,164 +6,192 @@
   <title>Viña Urbana – Vinos Boutique</title>
   <style>
     /* === Estilos generales === */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", Roboto, sans-serif;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: "Segoe UI", Roboto, sans-serif; }
+    body { background-color: #121212; color: #f5f5f5; line-height: 1.6; }
 
-    body {
-      background-color: #111;
-      color: #f2f2f2;
-      line-height: 1.6;
-    }
-
+    /* === Encabezado === */
     header {
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 15px 30px;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      background-color: rgba(20,20,20,0.95);
+      padding: 10px 30px;
+      position: fixed; width: 100%; top: 0; z-index: 1000;
+      display:flex; justify-content:space-between; align-items:center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.6);
     }
+    .logo { display:flex; align-items:center; gap:10px; }
+    .logo img { height:45px; border-radius:8px; cursor:pointer; transition:transform .3s ease; }
+    .logo img:hover { transform:scale(1.05); }
+    nav ul { list-style:none; display:flex; gap:20px; align-items:center; margin-left:10px; }
+    nav ul li a { color:#f2f2f2; text-decoration:none; transition:color .25s; font-weight:500; }
+    nav ul li a:hover { color:#d4a85a; }
 
-    header h1 {
-      color: #b88a44;
-      font-size: 1.5em;
-      font-weight: 600;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-    }
-
-    nav ul li a {
-      color: #f2f2f2;
-      text-decoration: none;
-      transition: color 0.3s;
-      font-weight: 500;
-    }
-
-    nav ul li a:hover {
-      color: #b88a44;
-    }
-
-    /* === Sección principal === */
+    /* === Hero === */
     .hero {
       background: url('https://images.unsplash.com/photo-1612197596525-5d0e4b5d45e5?auto=format&fit=crop&w=1600&q=80')
-                  no-repeat center center/cover;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 0 20px;
+                no-repeat center center/cover;
+      height: 90vh; display:flex; align-items:center; justify-content:center; text-align:center; padding:0 20px;
+      margin-top:70px; /* espacio para header fijo */
     }
-
     .hero-content {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 15px;
-      max-width: 700px;
+      background: linear-gradient(135deg, rgba(0,0,0,0.65), rgba(40,20,10,0.7));
+      padding:45px; border-radius:18px; max-width:900px; box-shadow:0 8px 25px rgba(0,0,0,0.5);
+      backdrop-filter: blur(3px);
     }
+    .hero h2 { font-size:2.6em; margin-bottom:15px; color:#d4a85a; }
+    .hero p { font-size:1.15em; margin-bottom:20px; color:#f8f8f8; }
 
-    .hero h2 {
-      font-size: 2.5em;
-      margin-bottom: 15px;
-      color: #b88a44;
+    .btn { display:inline-block; padding:12px 25px; background-color:#b88a44; color:#111; border-radius:8px; font-weight:bold; text-decoration:none; transition:all .25s ease; }
+    .btn:hover { background:#d4a85a; transform:scale(1.03); }
+
+    /* === Secciones inferiores === */
+    .section {
+      padding: 60px 20px;
+      text-align:center;
+      background: #0f0f0f;
     }
+    .container { max-width:1100px; margin:0 auto; padding:0 16px; }
 
-    .hero p {
-      font-size: 1.2em;
-      margin-bottom: 25px;
+    .h3 { color:#d4a85a; margin-bottom:18px; font-size:1.9em; }
+    .lead { color:#e7e7e7; max-width:900px; margin:0 auto 30px; }
+
+    /* Cards de vinos */
+    .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap:20px; margin-top:20px; }
+    .card {
+      background: linear-gradient(180deg, #1b1b1b, #121212);
+      border: 1px solid rgba(212,168,90,0.08);
+      border-radius:12px;
+      padding:14px;
+      text-align:center;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.5);
     }
+    .card img { width:100%; height:160px; object-fit:cover; border-radius:8px; margin-bottom:12px; }
+    .card h4 { color:#f3e8d6; margin-bottom:6px; }
+    .card p { color:#d9d9d9; margin-bottom:12px; font-size:0.95em; }
+    .card .price { color:#b88a44; font-weight:700; margin-bottom:10px; }
 
-    .btn {
-      display: inline-block;
-      padding: 12px 25px;
-      background-color: #b88a44;
-      color: #111;
-      border-radius: 8px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: background-color 0.3s;
-    }
+    /* Contact / newsletter */
+    .newsletter { display:flex; gap:10px; justify-content:center; margin-top:24px; flex-wrap:wrap; }
+    .newsletter input { padding:12px 14px; border-radius:8px; border:1px solid rgba(184,138,68,0.15); width:320px; background:#f8f3ee; color:#111; }
+    .newsletter button { padding:12px 18px; border-radius:8px; border:none; background:#b88a44; color:#111; font-weight:700; }
 
-    .btn:hover {
-      background-color: #d4a85a;
-    }
+    /* Footer */
+    footer { background:#070707; color:#bfbfbf; text-align:center; padding:28px 16px; font-size:0.95em; border-top:1px solid #222; margin-top:20px; }
 
-    /* === Secciones === */
-    section {
-      padding: 80px 20px;
-      text-align: center;
-    }
-
-    h3 {
-      color: #b88a44;
-      margin-bottom: 20px;
-    }
-
-    footer {
-      background-color: #000;
-      color: #ccc;
-      text-align: center;
-      padding: 30px;
-      font-size: 0.9em;
-    }
-
-    @media (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
-        background: rgba(0, 0, 0, 0.9);
-        position: absolute;
-        top: 60px;
-        right: 0;
-        width: 200px;
-        display: none;
-        padding: 10px;
-      }
+    /* Responsive tweaks */
+    @media (max-width:768px) {
+      .hero h2 { font-size:1.8em; }
+      .hero { height:70vh; }
+      nav ul { gap:10px; font-size:0.95em; }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Viña Urbana</h1>
+    <div style="display:flex; align-items:center;">
+      <a href="index.html" class="logo" title="Viña Urbana">
+        <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana">
+      </a>
+    </div>
+
     <nav>
       <ul>
         <li><a href="B04_catalogo.html">📖 Catálogo</a></li>
         <li><a href="B07_carro.html">🛒 Carrito</a></li>
-        <li><a href="B11_seguimiento.html">📦 Seguimiento de pedido</a></li>
+        <li><a href="B11_seguimiento.html">📦 Seguimiento</a></li>
         <li><a href="B02_login.html">🔑 Login</a></li>
-        <li><a href="admin.html">🔒 Modo Administrador</a></li> <!-- Emoji de candado -->
+        <li><a href="admin.html">🔒 Administrador</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- HERO -->
   <section class="hero">
-    <div class="hero-content">
+    <div class="hero-content container">
       <h2>Bienvenido a Viña Urbana</h2>
-      <p>Descubre nuestra exclusiva selección de vinos boutique.  
-      Calidad, tradición y elegancia en cada botella.</p>
+      <p>Descubre nuestra exclusiva selección de vinos boutique. Calidad, tradición y elegancia en cada botella.</p>
       <a href="B04_catalogo.html" class="btn">Ver Catálogo</a>
     </div>
   </section>
 
-  <section id="nosotros">
-    <h3>Sobre Nosotros</h3>
-    <p>En Viña Urbana nos apasiona ofrecer vinos de autor con identidad propia.  
-       Cada etiqueta cuenta una historia que celebra la cultura del vino chileno.</p>
+  <!-- SOBRE NOSOTROS -->
+  <section class="section" id="nosotros">
+    <div class="container">
+      <h3 class="h3">Sobre Nosotros</h3>
+      <p class="lead">En Viña Urbana nos apasiona ofrecer vinos de autor con identidad propia. Cada etiqueta cuenta una historia que celebra la cultura del vino chileno y el trabajo artesanal de nuestras viñas.</p>
+      <div style="display:flex; justify-content:center; gap:18px; flex-wrap:wrap; margin-top:18px;">
+        <div style="max-width:320px; text-align:left;">
+          <h4 style="color:#f3e8d6;">Visitas a la bodega</h4>
+          <p style="color:#d9d9d9;">Experiencias guiadas, degustaciones y tours entre viñedos.</p>
+        </div>
+        <div style="max-width:320px; text-align:left;">
+          <h4 style="color:#f3e8d6;">Cosecha sustentable</h4>
+          <p style="color:#d9d9d9;">Prácticas responsables para cuidar nuestras tierras y calidad de fruta.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- NUESTROS VINOS -->
+  <section class="section" id="catalogo">
+    <div class="container">
+      <h3 class="h3">Nuestros vinos</h3>
+      <p class="lead">Selección destacada — etiquetas boutique para paladares exigentes.</p>
+
+      <div class="grid">
+        <article class="card">
+          <img src="img/vino1.jpg" alt="Cabernet Sauvignon">
+          <h4>Cabernet Sauvignon</h4>
+          <p>Vino tinto de cuerpo y notas de fruta negra y especias.</p>
+          <div class="price">$10.990</div>
+          <div style="display:flex; gap:8px; justify-content:center;">
+            <a href="B06_detalle.html" class="btn" style="padding:8px 12px; font-size:0.95em;">Ver producto</a>
+            <a href="B07_carro.html" class="btn" style="background:#3a763a; color:#fff; padding:8px 12px; font-size:0.95em;">Agregar</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/vino2.jpg" alt="Merlot Reserva">
+          <h4>Merlot Reserva</h4>
+          <p>Suave y elegante, ideal para maridar carnes blancas y pastas.</p>
+          <div class="price">$8.990</div>
+          <div style="display:flex; gap:8px; justify-content:center;">
+            <a href="B06_detalle.html" class="btn" style="padding:8px 12px; font-size:0.95em;">Ver producto</a>
+            <a href="B07_carro.html" class="btn" style="background:#3a763a; color:#fff; padding:8px 12px; font-size:0.95em;">Agregar</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/vino3.jpg" alt="Chardonnay">
+          <h4>Chardonnay</h4>
+          <p>Blanco fresco con toques cítricos y de roble.</p>
+          <div class="price">$9.490</div>
+          <div style="display:flex; gap:8px; justify-content:center;">
+            <a href="B06_detalle.html" class="btn" style="padding:8px 12px; font-size:0.95em;">Ver producto</a>
+            <a href="B07_carro.html" class="btn" style="background:#3a763a; color:#fff; padding:8px 12px; font-size:0.95em;">Agregar</a>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACTO / NEWSLETTER -->
+  <section class="section" id="contacto">
+    <div class="container">
+      <h3 class="h3">Contacto y Newsletter</h3>
+      <p class="lead">Déjanos tu correo y te enviaremos novedades, promociones y eventos exclusivos.</p>
+
+      <div class="newsletter" role="form" aria-label="Formulario newsletter">
+        <input type="email" placeholder="tu@correo.com" aria-label="Correo para newsletter">
+        <button type="button" onclick="alert('¡Gracias! Te hemos suscrito (simulado).')">Suscribirme</button>
+      </div>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Viña Urbana – Vinos Boutique | Todos los derechos reservados.</p>
+    <div class="container">
+      <p>&copy; 2025 Viña Urbana – Vinos Boutique | Todos los derechos reservados.</p>
+      <p style="font-size:0.85em; color:#9f9f9f; margin-top:6px;">Dirección ficticia · Tel: +56 9 1234 5678 · contacto@vinaurbana.cl</p>
+    </div>
   </footer>
 
 </body>
